--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_CLIENT_ID=62373501142-jiqbmhdmci1s9sl208e39fg826ai4b2r.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
