--- a/package.json
+++ b/package.json
@@ -9,36 +9,38 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@headlessui/react": "^1.7.3",
-        "@heroicons/react": "^2.0.12",
-        "@reduxjs/toolkit": "^1.8.6",
+        "@headlessui/react": "^1.7.4",
+        "@heroicons/react": "^2.0.13",
+        "@reduxjs/toolkit": "^1.9.0",
         "debug": "^4.3.4",
-        "firebase": "^9.12.1",
-        "next": "12.3.1",
-        "next-auth": "^4.14.0",
+        "firebase": "^9.13.0",
+        "next": "13.0.2",
+        "next-auth": "^4.16.4",
         "react": "18.2.0",
         "react-burger-menu": "^3.0.8",
         "react-dom": "18.2.0",
         "react-flags-select": "^2.2.3",
         "react-loader-spinner": "^5.3.4",
-        "react-redux": "^8.0.4",
+        "react-redux": "^8.0.5",
         "react-responsive-carousel": "^3.2.23",
-        "sass": "^1.55.0",
-        "sharp": "^0.31.1",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2",
+        "sass": "^1.56.1",
+        "sharp": "^0.31.2",
         "yup": "^0.32.11"
     },
     "devDependencies": {
         "@tailwindcss/line-clamp": "^0.4.2",
         "@types/debug": "^4.1.7",
-        "@types/node": "18.11.2",
-        "@types/react": "18.0.21",
+        "@types/node": "18.11.9",
+        "@types/react": "18.0.25",
         "@types/react-burger-menu": "^2.8.3",
-        "@types/react-dom": "18.0.6",
-        "autoprefixer": "^10.4.12",
-        "eslint": "8.25.0",
-        "eslint-config-next": "12.3.1",
+        "@types/react-dom": "18.0.8",
+        "autoprefixer": "^10.4.13",
+        "eslint": "8.27.0",
+        "eslint-config-next": "13.0.2",
         "postcss": "^8.4.18",
-        "tailwindcss": "^3.1.8",
+        "tailwindcss": "^3.2.3",
         "typescript": "4.8.4"
     }
 }
