--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "@headlessui/react": "^1.7.4",
         "@heroicons/react": "^2.0.13",
         "@reduxjs/toolkit": "^1.9.0",
+        "@stripe/stripe-js": "^1.42.1",
         "debug": "^4.3.4",
         "firebase": "^9.13.0",
-        "next": "13.0.2",
+        "next": "^13.0.2",
         "next-auth": "^4.16.4",
         "react": "18.2.0",
         "react-burger-menu": "^3.0.8",
@@ -27,6 +28,7 @@
         "redux-thunk": "^2.4.2",
         "sass": "^1.56.1",
         "sharp": "^0.31.2",
+        "stripe": "^10.17.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
