--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@stripe/stripe-js": "^1.42.1",
         "debug": "^4.3.4",
         "firebase": "^9.13.0",
+        "firebase-admin": "^11.2.1",
+        "micro": "^9.4.1",
         "next": "^13.0.2",
         "next-auth": "^4.16.4",
         "react": "18.2.0",
@@ -29,6 +31,7 @@
         "sass": "^1.56.1",
         "sharp": "^0.31.2",
         "stripe": "^10.17.0",
+        "stripe-event-types": "^1.0.2",
         "yup": "^0.32.11"
     },
     "devDependencies": {
